package app.domain.shared;

import app.domain.model.Sample;

import java.util.ArrayList;
import java.util.List;

public interface ListOfSamples {
    List<Sample> samplesList = new ArrayList<>();
}
